changed fixed nav on mobile

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ h1.subheadertext { font-size: 18px; text-align: center; }
 .profile_container { margin-left: auto; margin-right: auto; width: 100%; height: auto; }
 .profile_image { float: none; margin-left: auto; margin-right: auto; margin-top: 10px; }
 .profile_text { float: none; margin: 0; padding-top: 0; height: auto; text-align: center; }
-.nav-fixed { padding-top: 10px; padding-bottom: 10px;  margin: auto; width: 100%; height: auto; text-align: center; }
+.nav-fixed { margin: auto; width: 100%; height: auto; text-align: center; }
 .nav-fixed ul { display: none; }
 .nav { margin: 0 auto; padding-top: 10px; padding-bottom: 10px; height: auto; width: 100%; text-align: center; }
 .nav ul { margin: auto; height: 5px; width: 35px; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; text-align: center; content:""; }
@@ -128,8 +128,8 @@ h1.subheadertext { font-size: 18px; text-align: center; }
 .container_main { z-index: 0; width: 90%; }
 a.anchor { display: block; position: relative; visibility: hidden; top: -40px; }
 .nav div.backtotop { display: none; }
-.nav-fixed div.backtotop { display: block; float: none; padding-top: 0; }
-.nav-fixed div.backtotop a { display: inline; border: none; font-size: 40px; color: #fcfdff; font-weight: bolder; line-height: 0.5; }
+.nav-fixed div.backtotop { display: block; float: none; padding-top: 10px; padding-bottom: 10px;  }
+.nav-fixed div.backtotop a { display: inline; border: none; font-size: 30px; color: #fcfdff; font-weight: bolder; }
 .nav-fixed div.backtotop a:hover { color: #61dafb; opacity: 1; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=100)"; }
 .nav-fixed div.backtotop a:visited { color: #fcfdff; }
 .col_c	{ width:90%; }
